add dependencies for jakarta restapi to RESTservices pom.xml